--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -18821,12 +18821,12 @@ references:
   commentId: T:WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort
   fullName: WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort
   nameWithType: QuestDragonmawPort
-- uid: WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.#ctor(Rectangle)
-  name: QuestDragonmawPort(Rectangle)
-  href: api-source/WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.html#WarcraftLegacies_Source_Quests_Dragonmaw_QuestDragonmawPort__ctor_Rectangle_
-  commentId: M:WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.#ctor(Rectangle)
-  fullName: WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.QuestDragonmawPort(Rectangle)
-  nameWithType: QuestDragonmawPort.QuestDragonmawPort(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.#ctor(Rectangle,unit)
+  name: QuestDragonmawPort(Rectangle, unit)
+  href: api-source/WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.html#WarcraftLegacies_Source_Quests_Dragonmaw_QuestDragonmawPort__ctor_Rectangle_unit_
+  commentId: M:WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.#ctor(Rectangle,unit)
+  fullName: WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.QuestDragonmawPort(Rectangle, unit)
+  nameWithType: QuestDragonmawPort.QuestDragonmawPort(Rectangle, unit)
 - uid: WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.#ctor*
   name: QuestDragonmawPort
   href: api-source/WarcraftLegacies.Source.Quests.Dragonmaw.QuestDragonmawPort.html#WarcraftLegacies_Source_Quests_Dragonmaw_QuestDragonmawPort__ctor_
@@ -19021,12 +19021,12 @@ references:
   commentId: T:WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal
   fullName: WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal
   nameWithType: QuestOrgrimmarPortal
-- uid: WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.#ctor(unit)
-  name: QuestOrgrimmarPortal(unit)
-  href: api-source/WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.html#WarcraftLegacies_Source_Quests_Dragonmaw_QuestOrgrimmarPortal__ctor_unit_
-  commentId: M:WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.#ctor(unit)
-  fullName: WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.QuestOrgrimmarPortal(unit)
-  nameWithType: QuestOrgrimmarPortal.QuestOrgrimmarPortal(unit)
+- uid: WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.#ctor(MacroTools.QuestSystem.QuestData,unit)
+  name: QuestOrgrimmarPortal(QuestData, unit)
+  href: api-source/WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.html#WarcraftLegacies_Source_Quests_Dragonmaw_QuestOrgrimmarPortal__ctor_MacroTools_QuestSystem_QuestData_unit_
+  commentId: M:WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.#ctor(MacroTools.QuestSystem.QuestData,unit)
+  fullName: WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.QuestOrgrimmarPortal(MacroTools.QuestSystem.QuestData, unit)
+  nameWithType: QuestOrgrimmarPortal.QuestOrgrimmarPortal(QuestData, unit)
 - uid: WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.#ctor*
   name: QuestOrgrimmarPortal
   href: api-source/WarcraftLegacies.Source.Quests.Dragonmaw.QuestOrgrimmarPortal.html#WarcraftLegacies_Source_Quests_Dragonmaw_QuestOrgrimmarPortal__ctor_
